# Homework_Cpp

./: .travis.yml  CMakeLists.txt  README.md  lib_shared.c  main.c  scrapers_test.cpp  skyscrapers.c  skyscrapers.h  travis.yml
lib/headers/: lib.h
lib/shared/: CMakeLists.txt
lib/shared/source/: CMakeLists.txt  lib_shared.c
lib/shared/tests/: CMakeLists.txt  lib_shared_tests.cpp
lib/static/: CMakeLists.txt
lib/static/source/: lib_static.c
lib/static/tests/: CMakeLists.txt  lib_static_tests.cpp
test/: CMakeLists.txt  test.cpp
test/direct/: CMakeLists.txt
test/direct/headers/: test_shared.h
test/direct/source/: test_static.c
tests/: test.cpp
tests/direct/headers/: test_shared.h  test_static.h
tests/direct/source/: test_shared.c  test_static.c
